# phontomflow

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile.backend  Dockerfile.frontend  Dockerfile.go-server  Dockerfile.ml-service  Dockerfile.nginx  Dockerfile.python-ml  Dockerfile.rust-engine  Makefile  README.md  ai.md  build.rs  claude.md  docker-compose.yml  go.mod  go.sum  package-lock.json  package.json  plan.md  requirements.txt  setup.md  start.sh  ven.toml
.github/workflows/: cd.yml  ci.yml  security-scan.yml
ai_models/: advanced_threat_intelligence.py
backend/: .eslintrc.cjs  .gitignore  IMPLEMENTATION_CHECKLIST.md  QUICK_START.md  README.md  env.example  jest.config.js  nodemon.json  package-lock.json  package.json  restart-server.ps1  start.bat  start.sh  tsconfig-paths-bootstrap.js  tsconfig.json  tsconfig.test.json
backend/bandit/: mab.ts  reward.ts  thompson.ts
backend/db/: neo4j.schema.ts  neo4j.ts
backend/detection/: payloadHeuristics.ts  relationshipAnalyzer.ts  sigma.ts  ttp_mapper.ts  yara.ts
backend/graph/: killchain.ts  lateralMovement.ts
backend/ingestion/: kafka.ts  normaliser.ts  types.ts
backend/ingestion/enrichment/: asset.ts  geoip.ts  threatintel.ts
backend/metrics/: bandit.ts
backend/routes/: graph.ts  playbooks.ts
backend/soar/: auditLog.ts  executor.ts  playbook.schema.ts
backend/soar/actions/: edr.ts  iam.ts  notify.ts
backend/soar/playbooks/: brute_force_response.json  honeypot_trigger_response.json  malware_hash_block.json  port_scan_response.json
backend/src/: index.ts
backend/src/api/: dashboard.html  index.html
backend/src/config/: banditConfig.ts  ewmaConfig.ts  hyperloglogConfig.ts  influxdbConfig.ts  markovConfig.ts  rateLimitConfig.ts  responseConfig.ts  sketchConfig.ts
backend/src/core/: BehavioralAnalyzer.ts  RelationshipAnalyzer.ts  RiskScoringEngine.ts  StatisticalAnalyzer.ts  ThreatDetectionEngine.ts
backend/src/events/: KafkaBus.ts  eventTypes.ts
backend/src/graph/: GNNExportService.ts  GraphThreatEngine.ts  Neo4jService.ts  types.ts
backend/src/middleware/: auth.ts
backend/src/models/: NetworkTraffic.ts  ThreatScore.ts  User.ts  UserBehavior.ts
backend/src/rpc/: GrpcClients.ts
backend/tests/: run-bandit-test.ts
backend/triage/: decisionEngine.ts  whitelist.ts
blockchain_security/: smart_contract_auditor.py
cmd/log-analyzer/: main.go
cmd/security-server/: grpc.go  kafka.go  main.go
cmd/threat-scanner/: main.go
config/: logstash.conf
data_analysis/: network_forensics.py
docs/: ALGORITHMS.md  ANALYSIS-ENGINES.md  API-REFERENCE.md  ARCHITECTURE.md  CLOSED-LOOP-LEARNING.md  DECEPTION-LAYER.md  DEPLOYMENT.md  IMPLEMENTATION-STATUS.md  MULTI-LANGUAGE-INTEGRATION.md  PROBLEMS.md  VISION.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/pages/: Analytics.tsx
frontend/src/: App.tsx  index.css
internal/alerts/: manager.go
internal/monitoring/: collector.go
internal/security/: network_monitor.go
k8s/: kustomization.yaml  namespace.yaml  serviceaccount.yaml
k8s/config/: backend-configmap.yaml  backend-secrets.yaml
k8s/deployments/: backend-deployment.yaml  frontend-deployment.yaml  go-server-deployment.yaml  ml-service-deployment.yaml  nginx-deployment.yaml  rust-engine-deployment.yaml
k8s/ingress/: ingress.yaml
k8s/services/: backend-service.yaml  frontend-service.yaml  go-server-service.yaml  ml-service-service.yaml  nginx-service.yaml  rust-engine-service.yaml
ml_models/: threat_detection_model.py
ml_service/: gen_proto.py  grpc_server.py  kafka_consumer.py  main.py  requirements.txt  run.py
nginx/: frontend-nginx.conf  nginx.conf
nginx/includes/: rate-limit-exclude.conf
pkg/analyzer/: threat_analyzer.go
pkg/metrics/: collector.go
pkg/network/: protocol.go
pkg/security/: validator.go
pkg/utils/: crypto.go
proto/: engine_service.proto  events.proto  ml_service.proto  threat_service.proto
proto/engine/: engine_service.pb.go  engine_service_grpc.pb.go
proto/events/: events.pb.go
proto/ml/: ml_service.pb.go  ml_service_grpc.pb.go
proto/threat/: threat_service.pb.go  threat_service_grpc.pb.go
quantum_security/: quantum_cryptography.py
scripts/: build-all.sh  create-topics.sh  deploy.sh  gen-proto.ps1  gen-proto.sh  load_mitre.ts  seed.sh
security_tools/: penetration_testing.py
services/l2-agent/: Dockerfile  graph.py  main.py  routes.py
src/: grpc_service.rs  kafka.rs  main.rs
src/analysis/: mod.rs  pattern_matcher.rs
src/compression/: lz4.rs  mod.rs
src/encryption/: mod.rs  symmetric.rs
src/network/: mod.rs  packet_parser.rs
src/performance_engine/: core.rs
src/security_engine/: crypto.rs  mod.rs
src/storage/: cache.rs  mod.rs
src/threading/: mod.rs  worker_pool.rs
src/utils/: hash.rs  mod.rs
tests/: bandit.test.ts  detection.test.ts  graph.test.ts  ingestion.test.ts  l2_agent_test.py
(+115 files in other folders)
